test/sema/comparison-of-void-type.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void f(void* a, void* b) {
    // CHECK: [[@LINE+1]]:12: error: invalid operands 'void' and 'void' to '=='
    _ = *a == *b;
}
